# efr

./: .gitignore  Cargo.toml  README.md  cli.md
efr/: Cargo.toml  README.md
efr-cli/: Cargo.toml
efr-cli/src/: error.rs  handler.rs  main.rs  operations.rs
efr-cli/src/config/: error.rs  mod.rs  raw.rs  try_new.rs  value.rs
efr-cli/src/operations/: authenticate_user.rs  change_password.rs  codes.rs  create_payment_account_credit_card.rs  create_payment_account_waiver.rs  error.rs  get.rs  get_case.rs  get_case_list.rs  get_filing_list.rs  get_notification_preferences.rs  get_payment_account.rs  get_payment_account_list.rs  get_payment_account_type_list.rs  get_policy.rs  get_user.rs  inquire_helpers.rs  post.rs  remove_payment_account.rs  reset_password.rs  review_filing.rs  self_resend_activation_email.rs  update_notification_preferences.rs  update_user.rs
efr-macros/: Cargo.toml  README.md  metadata.json
efr-macros/src/: lib.rs
efr-macros/src/codelist/: ast.rs  attr.rs  handler.rs  lt.rs  matcher.rs  mod.rs  print.rs  raw_attr.rs
efr-macros/src/metadata/: handler.rs  input.rs  mod.rs  print.rs  try_new.rs
efr-macros/src/partial_xml/: handler.rs  input.rs  mod.rs  print.rs
efr-macros/src/sub_class/: ast.rs  container_attr.rs  handler.rs  mod.rs  print.rs  variant_attr.rs
efr-macros/src/xml/: handler.rs  input.rs  mod.rs  ns_check.rs
efr-macros/src/xml/markup/: attr.rs  attr_value.rs  child.rs  element.rs  mod.rs  tag.rs
efr-macros/src/xml/print/: attr.rs  child.rs  element.rs  instr.rs  mod.rs  optimize.rs  tag.rs
efr/src/: lib.rs
efr/src/api/: datetime.rs  envelope.rs  error.rs  json.rs  metadata.rs  mod.rs  secure_efr_request.rs  traits.rs  tyler_header.rs  uuid.rs
efr/src/api/common/: int_bool.rs  mod.rs
efr/src/api/error/: api.rs  fault.rs  mod.rs  value.rs
efr/src/api/json/: handler.rs  insert_or_arrayify.rs  is_xsi_nil.rs  json_key.rs  mod.rs  parse_attributes.rs  parse_element.rs
efr/src/api/multipart/: builder.rs  content_type.rs  envelope.rs  mod.rs  response.rs  value.rs
efr/src/api/security/: copy_from_same_vec.rs  header.rs  mod.rs  sha.rs  xml_sign.rs
efr/src/api/serde_datetime/: mod.rs  yyyy_mm_dd.rs  yyyy_mm_dd_t_hh_mm_ss.rs
efr/src/codes_service/: code_case_category.rs  code_case_type.rs  code_country.rs  code_data_field.rs  code_document_type.rs  code_error.rs  code_filer_type.rs  code_filing.rs  code_filing_component.rs  code_filing_status.rs  code_location.rs  code_motion_type.rs  code_response.rs  code_state.rs  code_version.rs  codes_metadata.rs  codes_response.rs  col.rs  column_set.rs  error.rs  extract.rs  header.rs  mod.rs  pull.rs  raw_row.rs  row.rs  rows.rs  unzip.rs
efr/src/codes_service/utils/: code_header.rs  code_metadata.rs  code_response.rs  code_rows.rs  col.rs  mod.rs  pull.rs  unzip.rs
efr/src/court_policy_service/: get_policy_request.rs  mod.rs
efr/src/court_record_service/: case_party.rs  case_party_raw.rs  common.rs  get_case_list_request_business.rs  get_case_list_request_case_number.rs  get_case_list_request_person.rs  get_case_list_response.rs  get_case_request.rs  get_case_response.rs  mod.rs
efr/src/filing_review_service/: get_filing_list_request.rs  mod.rs  review_filing_request.rs
efr/src/firm_service/: create_payment_account_request_credit_card.rs  create_payment_account_request_waiver.rs  get_payment_account_list_request.rs  get_payment_account_request.rs  get_payment_account_type_list_request.rs  mod.rs  remove_payment_account_request.rs
efr/src/user_service/: authenticate_user_request.rs  authenticate_user_response.rs  change_password_request.rs  get_notification_preferences_request.rs  get_user_request.rs  mod.rs  notification_preferences_flags.rs  reset_password_request.rs  self_resend_activation_email_request.rs  update_notification_preferences_request.rs  update_user_request.rs
other-languages/: README.md
other-languages/python/: .gitignore  README.md  pyproject.toml
other-languages/python/src/: config.py  main.py
other-languages/python/src/admin_service/: authenticate_user_request.py
other-languages/python/src/api/: envelope.py  metadata.py  multipart_request.py  multipart_request_builder.py  security.py
other-languages/rust-lambda/: Cargo.toml  README.md
other-languages/rust-lambda/src/: error.rs  main.rs  proxy.rs
other-languages/rust-lambda/src/send/: authtoken.rs  error.rs  handler.rs  input.rs  mod.rs  sign.rs
other-languages/rust-lambda/src/send/operations/: authenticate_user.rs  get_case_list.rs  mod.rs
other-languages/typescript/: .gitignore  README.md  package.json  tsconfig.json
other-languages/typescript/src/: config.ts  main.ts
other-languages/typescript/src/api/: MultiPartRequest.ts  envelope.ts  metadata.ts  security.ts
other-languages/typescript/src/userService/: authenticateUserRequest.ts
