[package]
name = "efr-cli"
version = "0.1.88"
edition = "2024"
publish = false

[dependencies]
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.44"
efr = { version = "0.1.88", path = "../efr", features = ["codes", "metadata"] }
efr-macros = { version = "0.1.88", path = "../efr-macros", features = [
    "sub-class",
] }
inquire = { version = "0.9.3", features = ["date"] }
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls",
] }
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.10.6"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt"] }
toml = "1.0.3"
