[package]
name = "efr-macros"
version = "0.1.1"
edition = "2024"
description = "efr (EFile Rust) macros"
license = "MIT"
repository = "https://github.com/williamcparks/efr"
readme = "README.md"
keywords = ["efr"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = "2.0.117"
