[package]
name = "efr-macros"
version = "0.1.1"
edition = "2024"
description = "efr (EFile Rust) macros"
license = "MIT"
repository = "https://github.com/williamcparks/efr"
readme = "README.md"
keywords = ["efr"]

[features]
partial-xml = ["dep:proc-macro2", "dep:quote", "dep:syn"]
xml = ["dep:proc-macro2", "dep:quote", "dep:syn"]
sub-class = ["dep:proc-macro2", "dep:quote", "dep:syn"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.106", optional = true }
quote = { version = "1.0.44", optional = true }
syn = { version = "2.0.117", optional = true }
