[package]
name = "rust-lambda"
version = "0.1.86"
edition = "2021"

[dependencies]
efr = { version = "0.1.86", features = ["metadata"] }
lambda_http = "1.0.2"
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls",
] }
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_qs = "1.0.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros"] }
